scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/ok/flatten3.yf
---
name: contains
graphs:
  start:
    - {type: EchoNode, put: list, value: []}
    - {type: EchoNode, put: list2, value: []}
    - type: FlattenListNode
      flatten: ["{list}", "{list2}", "{list2}", [1,2]]
      output: "mergedlists"


