scraper-plugins/scraper-plugins-core/src/test/resources/scraper/plugins/core/typechecker/fail/contains.yf
---
name: contains
graphs:
  start:
    - {type: EchoNode, put: list, value: [1,2]}
    - type: ContainedInCollectionNode
      collection: "{list}"
      object: "hello"

